--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
@@ -13,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.0",
     "nodemon": "^2.0.22"
   }
 }
